[package]
name = "tavern_docker_example"
version = "0.0.0"
edition = "2024"
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
build = "src-actix/build.rs"

[[bin]]
name = "tavern_docker_example"
path = "src-actix/main.rs"

[lib]
name = "tavern_docker_example_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = ">=4.9.0" }
actix-files = { version = ">=0.6.6" }
serde_json = { version = ">=1.0.125" }
pretty_env_logger = ">=0.5.0"
include_dir = ">=0.7.4"
walkdir = ">=2.5.0"
log = ">=0.4.22"
anyhow = ">=1.0.95"
thiserror = ">=2.0.11"
vite-actix = ">=0.2.5"


[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"
